# CppQRS

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/cqrs/: AppConfig.h  AppRootActor.cpp  AppRootActor.h  Application.cpp  Application.h  ZmqPublisherActor.cpp  ZmqPublisherActor.h  ZmqReactor.cpp  ZmqReactor.h  ZmqSubscriberActor.cpp  ZmqSubscriberActor.h  ZmqSubscriberMessageSource.cpp  ZmqSubscriberMessageSource.h  ZmqTextMessageSink.cpp  ZmqTextMessageSink.h
src/cqrs/msg/: QueryConfig.h  Stream.h  ZmqMessagePtr.h
src/logger/: ConsoleLogger.cpp  ConsoleLogger.h  Logger.h
